# corticali

./: CMakeLists.txt  README.md
include/corticali/: endl.h  neural.h
source/: main.c  neural.c
