# ... 
cmake_minimum_required(VERSION 3.10)

# ... 
project(Corticali C)

# ... 
file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/source/*.c)

# ... 
include_directories(${CMAKE_SOURCE_DIR}/include)

# ... 
add_executable(corticali ${SOURCES})

# ... 
if(NOT WIN32)
# ... 
	target_link_libraries(corticali PRIVATE m)
endif()